# dl

./: .gitignore  README.md  build.sh  go.mod  go.sum  manual.txt
go/: downloader.go  hf.go  main.go  main3.go
go.beta/: downloader.go  functions_install.go  functions_search.go  hf.go  llama.go  main.go  test.go  updater.go
go.stable/: downloader.go  functions_install.go  functions_search.go  hf.go  main.go  updater.go
old/: main.go
research/: prompt.txt
research/chatgpt-canvas/: chatgpt-canvas.go  info.txt  prompt.txt
research/chatgpt-think/: chatgpt-think.go  info.txt
research/deepseekr1/: compare.txt  dl.deepseek.r1.go  info.txt  prompt.txt
research/deepseekr1-0528/: dl.deepseekr1-0528.go  info.txt  prompt.txt
research/gemini-2.5-pro/: dl.gemini-2.5-pro.go  hybrid.go  info.txt
research/gemini-flash-2.5/: dl.gemini-flash-2.5.go  info.txt
research/grok3/: dl.grok3.go  info.txt  prompt.txt
research/hybrid/gemini-2.5-pro_claude-sonnet-4/: dl.gemini-2.5.pro_claude-sonner-4.go  hybrid2.go  info.txt
research/qwen3-32b/: dl.qwen3-32b.go  info.txt  prompt.txt
rust/: Cargo.toml
rust/src/: main.rs
test/go/: test.go
