[package]
name = "dl"
version = "0.1.0"
edition = "2024" # Kept as per user's original file. If issues arise with stable toolchain, change to "2021".

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
reqwest = { version = "0.12.15", features = ["stream"] }
futures = "0.3.31"
indicatif = "0.17.11"
clap = { version = "4.5.38", features = ["derive"] }
url = "2.5.2"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
incremental = false